src/index/tests/snapshots/rusty__index__tests__index_tests__pre_processing_generates_inline_pointers.snap
---
source: src/index/tests/index_tests.rs
expression: new_pointer_type
---
UserTypeDeclaration {
    data_type: PointerType {
        name: Some(
            "__foo_inline_pointer",
        ),
        referenced_type: DataTypeReference {
            referenced_type: "INT",
        },
    },
    initializer: None,
    scope: Some(
        "foo",
    ),
}
