src/index/tests/snapshots/rusty__index__tests__index_tests__pre_processing_generates_inline_structs-2.snap
---
source: src/index/tests/index_tests.rs
expression: var_data_type
---
DataTypeReference {
    referenced_type: "__foo_inline_struct",
}
