src/index/tests/snapshots/rusty__index__tests__index_tests__pre_processing_generates_inline_structs.snap
---
source: src/index/tests/index_tests.rs
expression: new_struct_type
---
StructType {
    name: Some(
        "__foo_inline_struct",
    ),
    variables: [
        Variable {
            name: "a",
            data_type: DataTypeReference {
                referenced_type: "INT",
            },
        },
    ],
}
