src/index/tests/snapshots/rusty__index__tests__index_tests__pre_processing_generates_pointer_to_pointer_type-2.snap
---
source: src/index/tests/index_tests.rs
expression: original
---
UserTypeDeclaration {
    data_type: PointerType {
        name: Some(
            "pointer_to_pointer",
        ),
        referenced_type: DataTypeReference {
            referenced_type: "__pointer_to_pointer",
        },
    },
    initializer: None,
    scope: None,
}
