src/index/tests/snapshots/rusty__index__tests__index_tests__pre_processing_generates_pointer_to_pointer_type.snap
---
source: src/index/tests/index_tests.rs
expression: new_pointer_type
---
UserTypeDeclaration {
    data_type: PointerType {
        name: Some(
            "__pointer_to_pointer",
        ),
        referenced_type: DataTypeReference {
            referenced_type: "INT",
        },
    },
    initializer: None,
    scope: None,
}
